--- a/README.org
+++ b/README.org
@@ -2433,9 +2433,9 @@ its content.
 + [[https://tek.brick.do/64693fb8-39b4-40a5-8762-768009eeed91][Learn just enough about linear types]]. ~ Artyom Kazak (@availablegreen). #Haskell #FunctionalProgramming
 
 * Previous readings
-+ [[./Readings of the year 2020.org][Readings of the year 2020]]
-+ [[./Readings of the year 2019.org][Readings of the year 2019]]
-+ [[./Readings of the year 2018.org][Readings of the year 2018]]
-+ [[./Readings of the year 2017.org][Readings of the year 2017]]
-+ [[./Readings of the year 2016.org][Readings of the year 2016]]
-+ [[./Readings of the year 2010 al 2015.org][Readings from the year 2010 to 2015]]
++ [[./Lecturas del año 2020.org][Readings of the year 2020]]
++ [[./Lecturas del año 2019.org][Readings of the year 2019]]
++ [[./Lecturas del año 2018.org][Readings of the year 2018]]
++ [[./Lecturas del año 2017.org][Readings of the year 2017]]
++ [[./Lecturas del año 2016.org][Readings of the year 2016]]
++ [[./Lecturas del año 2010 al 2015.org][Readings from the year 2010 to 2015]]
