--- a/README.org
+++ b/README.org
@@ -11,6 +11,7 @@ its content.
 
 * Content                                                                      :TOC:
 - [[#readings-of-the-year-2022][Readings of the year 2022]]
+  - [[#february-2022][February 2022]]
   - [[#january-2022][January 2022]]
 - [[#readings-of-the-year-2021][Readings of the year 2021]]
   - [[#december-2021][December 2021]]
@@ -28,6 +29,16 @@ its content.
 - [[#previous-readings][Previous readings]]
 
 * Readings of the year 2022
+
+** February 2022
+
+*** 01-Feb-22
++ [[https://www.isa-afp.org/entries/Interpolation_Polynomials_HOL_Algebra.html][Interpolation polynomials (in HOL-Algebra)]]. ~ Emin Karayel. #ITP #IsabelleHOL #Math
++ [[https://serokell.io/blog/introduction-to-free-monads][Introduction to free monads]]. ~ Nikolay Yakimov. #Haskell #FunctionalProgramming
++ [[https://okmij.org/ftp/continuations/index.htm][Delimited control and breadth-first, depth-first, and iterative deepening search]].l#reify-search #Haskell #FunctionalProgramming
++ [[https://reasonablypolymorphic.com/blog/underline-bugs/][Underlining the bugs]]. ~ Sandy Maguire. #Haskell #Agda #FunctionalProgramming
++ [[http://asignatura.us.es/algbas][Curso: Álgebra básica]]. #Matemáticas
++ [[https://irreal.org/blog/?p=10276][Combining find and grep in Emacs]]. #Emacs
 
 ** January 2022
 
